--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
+    </section>
+  </head>
+  <body>
       <div class="preview baku">
         <h1>Baku</h1>
+        <img src="https://i.imgur.com/H2nMNTC.jpg" alt="Baku" class="medium-pic">
       </div>
       <div class="preview london">
         <h1>London</h1>
+        <img src="https://i.imgur.com/gHjEINI.png"
+        class="medium-pic">
       </div>
       <div class="preview madrid">
         <h1>Madrid</h1>
+        <img src="https://i.imgur.com/Vy6tQuw.jpg"
+        class="medium-pic">
       </div>
       <div class="preview rome">
         <h1>Rome</h1>
+        <img src="https://i.imgur.com/ZKkvTZU.jpg"
+        class="medium-pic">
       </div>
     </section>
   </body>
